logs/webstag.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webstag'...
Compiling './lib/python3.5/site-packages/webstag/__init__.py'...
***   File "./lib/python3.5/site-packages/webstag/__init__.py", line 72
    print "Recompressing images and building thumbnails from %s..." % self.directory
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webstag/photo.py'...
***   File "./lib/python3.5/site-packages/webstag/photo.py", line 82
    print "Can't identify %s !" % self.filepath
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webstag/resources'...
Listing './lib/python3.5/site-packages/webstag/resources/css'...
Listing './lib/python3.5/site-packages/webstag/resources/images'...
Listing './lib/python3.5/site-packages/webstag/resources/js'...
Listing './lib/python3.5/site-packages/webstag/resources/vendor'...
Listing './lib/python3.5/site-packages/webstag/resources/vendor/bootstrap'...
Listing './lib/python3.5/site-packages/webstag/resources/vendor/colorbox'...
Listing './lib/python3.5/site-packages/webstag/resources/vendor/colorbox/i18n'...
Listing './lib/python3.5/site-packages/webstag/resources/vendor/colorbox/images'...
Listing './lib/python3.5/site-packages/webstag/resources/vendor/video-js'...
Listing './lib/python3.5/site-packages/webstag/templates'...
Compiling './lib/python3.5/site-packages/webstag/video.py'...
***   File "./lib/python3.5/site-packages/webstag/video.py", line 138
    print "Converting %s to %s..." % (self.filename, ext)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webstag-0.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
